k8s/deployment.yaml
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: team-scorpius-be
#   labels:
#     app: team-scorpius-be
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       app: team-scorpius-be
#   template:
#     metadata:
#       labels:
#         app: team-scorpius-be
#     spec:
#       containers:
#         - name: team-scorpius-be
#           image: team-scorpius-be
#           ports:
#             - containerPort: 8000

apiVersion: apps/v1
kind: Deployment
metadata:
  name: team-scorpius-be
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: app-instance
      app.kubernetes.io/name: app
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: app-instance
        app.kubernetes.io/name: app
    spec:
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      schedulerName: default-scheduler
      containers:
      - name: team-scorpius-be
        image: team-scorpius-be
        ports:
        - name: http
          protocol: TCP
          containerPort: 8000
        resources: {}
        livenessProbe:
          failureThreshold: 3
          httpGet:
            port: 8000
            path: /
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        readinessProbe:
          failureThreshold: 3
          httpGet:
            port: http
            path: /
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        imagePullPolicy: IfNotPresent
      imagePullSecrets: 
      - name: ryuto-nakano-pull-secret
      securityContext:
        runAsUser: 1000780001
        runAsGroup: 1000780001
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
